<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">pokr</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="or">또는</string>
    <string name="log_in">로그인</string>
    <string name="cancel">취소</string>
    <string name="forgot_my_pwd">비밀번호를 잊었다면?</string>
    <string name="email">이메일을 입력하세요</string>
    <string name="password">비밀번호를 입력하세요</string>
    <string name="register">가입하기</string>
    <string name="facebook_login">페이스북으로 로그인</string>
    <string name="facebook_register">페이스북으로 등록</string>
    <string name="email_register">이메일로 등록</string>
    <string name="slogan"> 정치 정보를 한 곳에서,\n 쉽고 빠르고 재미있게</string>
    <string name="home_fragment_empty">관심있는 인물, 의안, 키워드를\nfollow 해보세요.\n관련 최신 뉴스가 쌓입니다</string>
    <string name="facebook_app_id">1519111204991472</string>
   
    

</resources>