<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/pad_15dp"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/editText_id"
        style="@style/editext_graybg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:drawableLeft="@drawable/ic_username"
        android:hint="@string/email" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editText_passowd"
        style="@style/editext_graybg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/pad_5dp"
        android:layout_marginTop="@dimen/pad_10dp"
        android:drawableLeft="@drawable/ic_pwd"
        android:hint="@string/password"
        android:inputType="textPassword" >
    </EditText>
    <EditText
        android:id="@+id/editText_passowd_2nd"
        style="@style/editext_graybg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/pad_10dp"
        android:drawableLeft="@drawable/ic_pwd"
        android:hint="@string/password"
        android:inputType="textPassword" >
    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/pad_15dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:padding="@dimen/pad_5dp"
            android:text="@string/cancel"
            android:textColor="@color/red"
            android:textSize="@dimen/txt_18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnReg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:padding="@dimen/pad_5dp"
            android:text="@string/register"
            android:textColor="@color/sky_blue"
            android:textSize="@dimen/txt_18sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>